# Rl-Bot-Trin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  rlbot.cfg
bot_maker/: __main__.py
docs/: bot_maker.md  reward_guide.md
ml_bot/: bot.py  model.py  train.py
tests/: test_bot_maker.py  test_train_script.py
